package RPGDomain;

public enum EffectType {
    GRANT, REMOVE
}
